# hyp2rem

./: .gitignore  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.md  get-access.md  mypy.ini  pyproject.toml
docs/: get-access.md
hyp2rem/: __main__.py  exceptions.py  hyp2rem.py  hypothesis.py  remnote.py  utils.py
hyp2rem/hypothesis/: clients.py  models.py
hyp2rem/remnote/: clients.py  models.py
tests/: test_hypothesis.py  test_main.py  test_remnote.py  test_utils.py
