[tool.poetry]
name = "remnothesis"
version = "0.1.0"
description = "Hypothes.is to RemNote integration"
authors = ["Bernardo Chrispim Baron"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
remnothesis = "remnothesis.__main__:app"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.0"
minilog = "^2.0"
typer = {extras = ["all"], version = "^0.3.2"}

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
black = "^20.8b1"
isort = "^5.6.4"
mypy = "^0.790"
pre-commit = "^2.9.0"
pylint = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
